# Wheelchair-Bot

./: .gitignore  CONTRIBUTING.md  Dockerfile  EMULATOR.md  LICENSE  Makefile  QUICKSTART.md  README.md  USAGE.md  WHEELCHAIR_SUPPORT.md  conftest.py  controller.js  demo.py  docker-compose.yml  index.html  jest.config.js  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  start.sh  stop.sh  styles.css  test_services.py  webrtc.js
.github/: copilot-instructions.md
.github/workflows/: ci.yml
android-controller/: .gitignore  IMPLEMENTATION.md  QUICKSTART.md  README.md  gradlew  settings.gradle
android-controller/app/: build.gradle  proguard-rules.pro
android-controller/app/src/main/: AndroidManifest.xml
android-controller/app/src/main/java/com/wheelchairbot/controller/: JoystickView.kt  MainActivity.kt  SettingsActivity.kt  WebRTCClient.kt  WebSocketClient.kt
android-controller/app/src/main/res/layout/: activity_main.xml  activity_settings.xml
android-controller/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
config/: config.example.yaml  default.yaml  default_config.json
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: controller.js.html  index.html  webrtc.js.html
docs/: API.md  HARDWARE.md  api.md  architecture.md  contributing.md  getting-started.md
examples/: basic_control.py  show_models.py  simulated_control.py  wheelchair_bot_controller_demo.py
scripts/: run_tests.py
services/: __init__.py
services/net_agent/: __init__.py  main.py
services/safety_agent/: __init__.py  main.py
services/streamer/: __init__.py  main.py
services/teleopd/: __init__.py  main.py
src/tests/: __init__.py  test_emulator_controller.py  test_emulator_drive.py  test_emulator_integration.py  test_emulator_power.py  test_emulator_properties.py  test_emulator_safety.py  test_emulator_sensors.py
src/wheelchair/: __init__.py  cli.py  config.py  factory.py  interfaces.py
src/wheelchair/emulator/: __init__.py  controller.py  drive.py  loop.py  power.py  safety.py  sensors.py
tests/: README.md  __init__.py  setup.js  test_controller.py  test_controller_families_integration.py  test_integration.py  test_wheelchair_bot_controllers.py  test_wheelchair_bot_motors.py  test_wheelchair_bot_safety.py  test_wheelchair_bot_system.py  test_wheelchair_bot_wheelchairs.py  test_wheelchair_controller_additional.py  webrtc.test.js
web_client/: app.js  index.html  style.css
wheelchair_bot/: __init__.py  system.py
wheelchair_bot/controllers/: __init__.py  base.py  gamepad.py  joystick.py
wheelchair_bot/motors/: __init__.py  base.py  differential.py
wheelchair_bot/safety/: __init__.py  deadman.py  limiter.py
wheelchair_bot/wheelchairs/: __init__.py  base.py  models.py
wheelchair_controller/: __init__.py  controller.py  keyboard_control.py  motor_driver.py
